SKTOOLS-79: Ganske omfattende omskriving for å få up-to-date til å virke SKTOOLS-51: Fikset som følge av nevnte omskriving
[git-p4: depot-paths = "//sktools/SKToolsKode/trunk/": change = 51157]